--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,11 +12,13 @@
     "chart.js": "^4.4.8",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.479.0",
     "maxmind": "^4.3.24",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "systeminformation": "^5.25.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
