feat: demo log sizes and nginx config docs

--- a/dashboard/nginx/nginx.conf
+++ b/dashboard/nginx/nginx.conf
@@ -2,14 +2,14 @@ server {
     listen 80;
     server_name yourdomain.com; # Change to your domain or IP
 
-    location /logs/access.log {
+    location /api/logs/access {
         alias /var/log/nginx/access.log;
         allow YOUR_IP_HERE; # Replace with your actual IP
         deny all; # Deny access for everyone else
         add_header Content-Type text/plain;
     }
 
-    location /logs/error.log {
+    location /api/logs/error {
         alias /var/log/nginx/error.log;
         allow YOUR_IP_HERE; # Replace with your actual IP
         deny all; # Deny access for everyone else
