feat: create landing home page

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,7 +21,8 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "systeminformation": "^5.25.11"
+    "systeminformation": "^5.25.11",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
