--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -32,6 +32,7 @@
     "@types/pako": "^2.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.175.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "tailwindcss": "^4",
