--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,7 +16,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.479.0",
     "maxmind": "^4.3.24",
-    "next": "15.2.0",
+    "next": "^15.2.3",
     "pako": "^2.1.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
