feat: live view init

--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -10,7 +10,7 @@ NGINX_ANALYTICS_SYSTEM_MONITORING=true
 NGINX_ANALYTICS_MONITOR_INTERVAL=2000
 # Optional user authentication to access the dashboard
 NGINX_ANALYTICS_PASSWORD=password
-# Specify if an custom Nginx log format is being used
+# Specify if an custom NGINX log format is being used
 NGINX_ANALYTICS_LOG_FORMAT=
 
 # --- When using the agent or remote data access ---
