--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-globe.gl": "^2.33.2",
     "systeminformation": "^5.25.11",
     "three": "^0.175.0"
   },
