feat: refactor agent config

--- a/agent/.env.example
+++ b/agent/.env.example
@@ -7,5 +7,5 @@ NGINX_ANALYTICS_ERROR_PATH=/var/log/nginx
 NGINX_ANALYTICS_SYSTEM_MONITORING=true
 # Interval between polling system resources in milliseconds
 NGINX_ANALYTICS_MONITOR_INTERVAL=2000
-# Specify if an custom Nginx log format is being used
+# Specify if an custom NGINX log format is being used
 NGINX_ANALYTICS_LOG_FORMAT=
