--- a/agent/.env.example
+++ b/agent/.env.example
@@ -1,4 +1,4 @@
-
+PORT=8080
 # Provide a path to the directory containing logs, or a specific log file
 NGINX_ANALYTICS_ACCESS_PATH=/var/log/nginx
 # If error logs are in a different directory, specify it here
@@ -7,7 +7,5 @@ NGINX_ANALYTICS_ERROR_PATH=/var/log/nginx
 NGINX_ANALYTICS_SYSTEM_MONITORING=true
 # Interval between polling system resources in milliseconds
 NGINX_ANALYTICS_MONITOR_INTERVAL=2000
-# Optional user authentication to access the dashboard
-NGINX_ANALYTICS_PASSWORD=password
-# Specify if an custom Nginx log format is being used
+# Specify if an custom NGINX log format is being used
 NGINX_ANALYTICS_LOG_FORMAT=
