feat: dynamic height for referrers card

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,6 +1,6 @@
 APP_NAME := nginx-analytics
 BUILD_DIR := bin
-CMD_DIR := cmd/$(APP_NAME)
+CMD_DIR := ./cmd/$(APP_NAME)
 
 .PHONY: all build run clean
 
@@ -8,7 +8,7 @@ all: build
 
 build:
 	@echo "Building $(APP_NAME)..."
-	go build -o $(BUILD_DIR)/$(APP_NAME) $(CMD_DIR)/main.go
+	go build -o $(BUILD_DIR)/$(APP_NAME) $(CMD_DIR)
 
 run: build
 	@echo "Running $(APP_NAME)..."
