--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/chart.js": "^2.9.41",
+    "babel-plugin-react-compiler": "^1.0.0",
     "chart.js": "^4.4.8",
     "chartjs-adapter-date-fns": "^3.0.0",
     "d3": "^7.9.0",
