feat(#3): add Docker images for agent and dashboard with GHCR publishing

--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -1,12 +1,30 @@
-# Dockerfile
-FROM golang:1.24
+FROM golang:1.24-alpine AS builder
 
 WORKDIR /app
+
+COPY go.mod go.sum ./
+RUN go mod download
+
 COPY . .
+RUN CGO_ENABLED=0 GOOS=linux go build -o agent ./cmd/agent
 
-RUN go build -o nginx_analytics_agent .
+FROM alpine:3
 
-# For authentication - must match token used by the web app
-ENV NGINX_ANALYTICS_AUTH_TOKEN=your-auth-token
+RUN apk --no-cache add ca-certificates && \
+    addgroup -S agent && adduser -S agent -G agent
 
-CMD ["./nginx_analytics_agent"]
+WORKDIR /app
+
+COPY --from=builder /app/agent .
+
+# GeoLite2 database is not bundled due to MaxMind's license restrictions.
+# Mount it at runtime to enable location lookups:
+#   -v /path/to/GeoLite2-Country.mmdb:/app/GeoLite2-Country.mmdb
+# Without it, location lookups are silently disabled.
+
+RUN chown -R agent:agent /app
+USER agent
+
+EXPOSE 5000
+
+CMD ["./agent"]
